problema de padding

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <header>
         <h1>
-            Curiosidades Históricas
+            Curiosidades Históricas          
         </h1>
         <p>
             Tudo aquilo que você sempre quis saber sobre a história e cultura, em um único lugar.
@@ -21,8 +21,7 @@
        
         <a href="#">Home</a>
         <a href="#">Notícias</a>
-        <a href="#">Curiosidades</a>
-        <a href="#">Fale Conosco</a>
+        <a href="#">Contato</a>
     </nav>
     <main>
         <article>
